<resources>
    <string name="app_name">Kviz</string>

    <string name="headline_first_part">Književnost</string>
    <string name="headline_second_part">Kviz</string>
    <string name="start_button">Igraj</string>
    <string name="results_button">Rezultati</string>
    <string name="about_button">Info</string>
    <string name="exit_button">Izlaz</string>

    <string name="info_headline">Informacije</string>
    <string name="purpose">Ova aplikacija je izrađena u svrhu diplomskog rada na Odjelu za informatiku (modul: Informacijski i komunikacijski sustavi)</string>
    <string name="college_web_page">http://www.inf.uniri.hr/hr/</string>
    <string name="university">Sveučilište u Rijeci</string>
    <string name="university_web_page">https://www.uniri.hr/</string>
    <string name="mentor">Mentor: dr.sc. Božidar Kovačić doc.</string>
    <string name="mentor_web_page">http://portal.uniri.hr/Portfelj/1506</string>
    <string name="credits">Izradila: univ. bacc. inf. Andrea Lakošeljac</string>
    <string name="email_address">mailto:andrea.lakoseljac1@gamil.com</string>

    <string name="results_headline">Top rezultati</string>
    <string name="empty_view_title_text">Još nema rezultata</string>
    <string name="empty_view_subtitle_text">Započni s igrom kako bi se našao na popisu</string>
    <string name="intent_type_email">text/plain</string>
    <string name="result_player_headline">Igrač</string>
    <string name="result_score_headline">Rezultat</string>

    <string name="submit_answer">Dalje</string>
    <string name="question">Pitanje</string>
    <string name="score_textview">Bodovi:</string>
    <string name="score_on_screen">/</string>
    <string name="score_message">%1$d/%2$d</string>
    <string name="question_number">Pitanje: %1$d/%2$d</string>
    <string name="positive_toast">Bravo! Točan odgovor!</string>
    <string name="negative_toast">Nažalost, pogrešan odgovor!</string>
    <string name="add_answer_toast">Morate unijeti odgovor!</string>



    <string name="final_win_message">You are the real bookworm!</string>
    <string name="play_again_button">Play again</string>
    <string name="final_lose_message">Maybe you should read more.</string>
    <string name="result_message">Your result is </string>
    <string name="question1">DOSTOJEVSKI - CRIME AND PUNISHMENT: Why does Raskolnikov kill Lizaveta?</string>
    <string name="answer11">He dislikes her</string>
    <string name="answer12">She is trying to prevent him from stealing the pawnbroker\'s money</string>
    <string name="answer13">She attacks him in an attempt to revenge her sister</string>
    <string name="answer14">She is a witness to the murder of her sister</string>
    <string name="true_answer1">She is a witness to the murder of her sister</string>
    <string name="question2">SHAKESPEARE: How many Plays did Shakespeare write?</string>
    <string name="answer21">46</string>
    <string name="answer22">50</string>
    <string name="answer23">37</string>
    <string name="answer24">25</string>
    <string name="true_answer2">37</string>
    <string name="question3">POE - THE BLACK CAT: The narrator blames his change in mood and behavior on:</string>
    <string name="answer31">a brain tumor</string>
    <string name="answer32">alcohol</string>
    <string name="answer33">a curse put on him</string>
    <string name="answer34">his wife divorcing him</string>
    <string name="true_answer3">alcohol</string>
    <string name="question4">SALINGER - THE CATCHER IN THE RYE: When the novel begins, Holden describes:</string>
    <string name="answer41">watching a football game</string>
    <string name="answer42">taking a train to New York</string>
    <string name="answer43">repairing in a tuberculosis rest home</string>
    <string name="answer44">riding a carousel in Central Park</string>
    <string name="true_answer4">watching a football game</string>
    <string name="question5">BECKETT - WAITING FOR GODOT: Who informs Pozzo and Lucky that Godot won\'t be coming on the first day??</string>
    <string name="answer51">Lucky</string>
    <string name="answer52">Pozzo</string>
    <string name="answer53">A boy</string>
    <string name="answer54">Godot himself</string>
    <string name="true_answer5">A boy</string>
    <string name="question6">VOLTAIRE - CANDIDE: After enduring terrible hardship, what does Pangloss still have at the end of the novel?</string>
    <string name="answer61">His good look</string>
    <string name="answer62">His optimism</string>
    <string name="answer63">His fortune</string>
    <string name="answer64">His wife</string>
    <string name="true_answer6">His optimism</string>
    <string name="question7">FLAUBERT - MADAME BOVARY: At what location does Rodolphe declare his love for Emma?</string>
    <string name="answer71">A church</string>
    <string name="answer72">An agricultural fair</string>
    <string name="answer73">A carneval</string>
    <string name="answer74">A farm</string>
    <string name="true_answer7">An agricultural fair</string>
    <string name="question8">DE BALZAC - FATHER GORIOT: Which characters appear in this novel?"</string>
    <string name="answer81">Rastignac</string>
    <string name="answer82">Leon</string>
    <string name="answer83">Vautrin</string>
    <string name="answer84">Nora</string>
    <string name="question9">A DOLL\'S HOUSE: Who wrote this play?</string>
    <string name="true_answer9">Henrik Ibsen</string>
    <string name="continue_button">Continue</string>
    <string name="sorry_message">I\'m sorry: %.2f%%</string>
    <string name="congrats_message">Congrats: %.2f%%</string>
</resources>
